reverted draw method to the overload version and ultimated the turns/end-game logic + tiny javaDocs fixes